# rmc

./: Doxyfile.in  Makefile.am  Makefile.in  aclocal.m4  configure  configure.in  rmc.spec.in
engine/: Makefile.am  Makefile.in  acceleration-strategy.cc  acceleration-strategy.h  engine.h  regular-composition.cc  regular-composition.h
engine/eqcol/: Makefile.am  Makefile.in  column-transducer-part.cc  column-transducer-part.h  eq-column-sequence.cc  eq-column-sequence.h  eq-column-transducer.cc  eq-column-transducer.h  eqsize-solver.cc  eqsize-solver.h
engine/fixpoint/: Makefile.am  Makefile.in  fixpoint-solver.cc  fixpoint-solver.h
engine/linear/: Makefile.am  Makefile.in  linear-acceleration-strategy.cc  linear-acceleration-strategy.h
engine/subset/: Makefile.am  Makefile.in  column-relation.cc  column-relation.h  column-transducer-solver.cc  column-transducer-solver.h  column-transducer.cc  column-transducer.h  column.cc  column.h
engine/tc/: Makefile.am  Makefile.in  tc-acceleration-strategy.cc  tc-acceleration-strategy.h
examples/: Makefile.am  Makefile.in  bakery.l  burns.l  dijkstra.l  szymanski.l  termination.l  tokenpass.l  tokenring.l
formula/: Makefile.am  Makefile.in  formula-parser.cc  formula-parser.h  formula.cc  formula.h  formulabuild.cc  formulabuild.h  formulamod.h  formulasubstitute.cc  formulasubstitute.h  formulatransform.cc  formulatransform.h  lexer.cc  lexer.ll  negationpush.cc  negationpush.h  parser-types.h  parser.cc  parser.h  parser.yy  prettyprint.cc  prettyprint.h  ref.h  type.cc  type.h  typecheck.cc  typecheck.h
frontend/: Makefile.am  Makefile.in  parselogic.cc
modelchecker/: Makefile.am  Makefile.in  modelchecker.h  tform-modelfinder.cc  tform-modelfinder.h  tform-transformer.cc  tform-transformer.h
structure/: Makefile.am  Makefile.in  finite-word.cc  finite-word.h  signature.cc  signature.h  structure.h
transducer/: Makefile.am  Makefile.in  alphabet.cc  alphabet.h  transducer.cc  transducer.h
